[gd_scene load_steps=4 format=2]

[ext_resource path="res://user_interface/camera_control.gd" type="Script" id=1]
[ext_resource path="res://user_interface/hud.gd" type="Script" id=2]
[ext_resource path="res://user_interface/count.gd" type="Script" id=3]

[node name="Gui" type="CanvasLayer"]

[node name="hud" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="hud"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -182.0
margin_right = 250.0
margin_bottom = -22.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/separation = 13
alignment = 2

[node name="camera_control" type="HBoxContainer" parent="hud/VBoxContainer"]
margin_right = 230.0
margin_bottom = 20.0
custom_constants/separation = 24
script = ExtResource( 1 )

[node name="Button" type="Button" parent="hud/VBoxContainer/camera_control"]
margin_right = 87.0
margin_bottom = 20.0
text = "Global View"

[node name="Button2" type="Button" parent="hud/VBoxContainer/camera_control"]
margin_left = 111.0
margin_right = 196.0
margin_bottom = 20.0
disabled = true
text = "Player View"

[node name="Button" type="Button" parent="hud/VBoxContainer"]
margin_top = 33.0
margin_right = 230.0
margin_bottom = 53.0
text = "Generate new map"

[node name="room_amount" type="HBoxContainer" parent="hud/VBoxContainer"]
margin_top = 66.0
margin_right = 230.0
margin_bottom = 82.0

[node name="Label" type="Label" parent="hud/VBoxContainer/room_amount"]
margin_top = 1.0
margin_right = 87.0
margin_bottom = 15.0
text = "room amount"

[node name="LineEdit" type="HSlider" parent="hud/VBoxContainer/room_amount"]
margin_left = 91.0
margin_right = 226.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 20.0
value = 1.0

[node name="count" type="Label" parent="hud/VBoxContainer/room_amount"]
margin_left = 230.0
margin_top = 1.0
margin_right = 230.0
margin_bottom = 15.0
script = ExtResource( 3 )

[node name="CheckBox" type="CheckBox" parent="hud/VBoxContainer"]
margin_top = 95.0
margin_right = 230.0
margin_bottom = 119.0
pressed = true
text = "add boss room"

[node name="CheckBox2" type="CheckBox" parent="hud/VBoxContainer"]
margin_top = 132.0
margin_right = 230.0
margin_bottom = 156.0
pressed = true
text = "add player room"

[node name="CheckBox3" type="CheckBox" parent="hud/VBoxContainer"]
margin_top = 169.0
margin_right = 230.0
margin_bottom = 193.0
pressed = true
text = "add shop room"

[node name="CheckBox4" type="CheckBox" parent="hud/VBoxContainer"]
margin_top = 206.0
margin_right = 230.0
margin_bottom = 230.0
pressed = true
text = "add treasure rooms"

[connection signal="pressed" from="hud/VBoxContainer/camera_control/Button" to="hud/VBoxContainer/camera_control" method="change_to_global_view"]
[connection signal="pressed" from="hud/VBoxContainer/camera_control/Button2" to="hud/VBoxContainer/camera_control" method="change_to_player_view"]
[connection signal="pressed" from="hud/VBoxContainer/Button" to="hud" method="generate_new_world"]
[connection signal="value_changed" from="hud/VBoxContainer/room_amount/LineEdit" to="hud" method="room_amount_changed"]
[connection signal="value_changed" from="hud/VBoxContainer/room_amount/LineEdit" to="hud/VBoxContainer/room_amount/count" method="_on_LineEdit_value_changed"]
[connection signal="toggled" from="hud/VBoxContainer/CheckBox" to="hud" method="room_box_changed" binds= [ "add_boss_room" ]]
[connection signal="toggled" from="hud/VBoxContainer/CheckBox2" to="hud" method="room_box_changed" binds= [ "add_pl_room" ]]
[connection signal="toggled" from="hud/VBoxContainer/CheckBox3" to="hud" method="room_box_changed" binds= [ "add_shop_room" ]]
[connection signal="toggled" from="hud/VBoxContainer/CheckBox4" to="hud" method="room_box_changed" binds= [ "add_treasure_room" ]]
